crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__lexer__lexer_error_invalid_escape.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/lexer.rs
expression: diagnostics
---
- diag_version: 1
  level: error
  code: AT1003
  message: "Invalid escape sequence '\\p'"
  file: "<input>"
  line: 2
  column: 12
  length: 4
  snippet: "let path = \"C:\\path\\to\\file\";"
  label: lexer error
