crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__lexer__lexer_error_unexpected_char.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/lexer.rs
assertion_line: 222
expression: diagnostics
---
- diag_version: 1
  level: error
  code: AT1001
  message: "unexpected token `{token}`"
  file: tests/errors/unexpected_char.atl
  line: 3
  column: 9
  length: 1
  snippet: let y = $100;
  label: "Unexpected character '$'"
  help:
    - "check for missing semicolons, brackets, or operators near this location"
- diag_version: 1
  level: error
  code: AT1001
  message: "unexpected token `{token}`"
  file: tests/errors/unexpected_char.atl
  line: 4
  column: 9
  length: 1
  snippet: "let z = #tag;"
  label: "Unexpected character '#'"
  help:
    - "check for missing semicolons, brackets, or operators near this location"
