crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__lexer__lexer_error_unterminated_string.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/lexer.rs
expression: diagnostics
---
- diag_version: 1
  level: error
  code: AT1002
  message: Unterminated string literal
  file: "<input>"
  line: 2
  column: 15
  length: 24
  snippet: "let message = \"This string never ends"
  label: lexer error
